# Cyclops

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  latex_to_py.py  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
application/: application.cpp  application.hpp  main.cpp  theme.hpp
application/components/: component.cpp  component.hpp  sidebar.cpp  sidebar.hpp
application/components/engine/: viewport.cpp  viewport.hpp
application/components/widgets/: filter.cpp
application/geometrics/: b_spline_curve.cpp
src/: main.cpp
utils/: generate_benchmark.py
